<resources>
    <string name="app_name">GuessTheSong</string>
    <string name="submit_name">Submit</string>
    <string name="guessTheSong">Guess The Song</string>
    <string name="skip">Skip</string>
    <string name="quizLeft">You have 0 Quiz Left!</string>
    <string name="quizPacks">Purchase Quiz Packs Now:</string>
    <string name="standard">Standard</string>
    <string name="songs">Songs</string>
    <string name="buyNow">Buy Now</string>
    <string name="myWin">My Win</string>
    <string name="leaderBoard">LeaderBoard</string>

    <string name="totalQuizes">Total Quizes</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="yourWins">Your Wins</string>
    <string name="quizName">QuizName/Code</string>
    <string name="score">Score</string>
    <string name="totalPlays">Total Played</string>
    <string name="yourRank">Your Rank</string>
    <string name="standings">Standings</string>

    <!--  Login  -->
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="addNumber">Add Number</string>
    <string name="countryText">Country</string>
    <string name="addAddress">Add Address</string>
    <string name="requiredMsisdn">Mobile Number can\'t be Empty</string>
    <string name="numberLength">Mobile Number at least 8 Digit</string>
    <string name="requiredLength">At least 6 Digit number</string>
    <string name="checkNetwork">Please check your Internet Connectivity</string>
    <string name="transfer">Transfer</string>
    <string name="transferNow">Transfer Now</string>
    <string name="alreadyAccount">Already have an Account?</string>
    <string name="continueText">GET OTP</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="getStarted">Lets get started</string>
    <string name="subNumberText">We will send you an One Time Password on this mobile number</string>

    <!--  OTP Verification  -->
    <string name="verification">Verification</string>
    <string name="verifyOtp">OTP Verification</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="fillOtp">Please enter 6 digit OTP!</string>
    <string name="otpContent">Enter the OTP send to registered mobile</string>
    <string name="resendText">Didn\'t receive the OTP?</string>
    <string name="resendText2">RESEND</string>
    <string name="otpCheck">Otp didn\'t matched, Please try again!</string>
    <string name="validateOtp">Your OTP validated Successfully.</string>
    <string name="proceed">Verify &amp; Proceed</string>

    <!--  Country Code  -->
    <string name="search_hint">Search…</string>
    <string name="search">Search</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a country</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="success">Success!</string>
    <string name="fail">Fail!</string>
    <string name="exit_text">Do you want to quit?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--  Quiz Rules  -->
    <string name="quizRule">Quiz Rules</string>
    <string name="quizRuleTitle">Some Rules of this Quiz</string>
    <string name="ruleHeading1">1. Each category will consist of 5 songs, and with every correct answer, the difficulty level will increase.</string>
    <string name="ruleHeading2">2. You have 30 seconds to answer each song.</string>
    <string name="ruleHeading3">3. Selected answers cannot be changed.</string>
    <string name="ruleHeading4">4. No points for wrong answers.</string>
    <string name="ruleHeading5">5. There are two guaranteed prize levels after 5th and 10th questions.</string>
    <string name="exitQuiz">Exit Quiz</string>
    <string name="continueQuiz">Continue</string>

    <!--  Quiz Types  -->
    <string name="playQuizType">What would you like to play the quiz for?</string>
    <string name="forData">Data</string>
    <string name="forMobile">Mobile</string>
    <string name="headset">Headset</string>
</resources>