<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_full_img"
    android:padding="@dimen/_15sdp"
    tools:context=".quizRules.QuizRulesActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rulesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:text="@string/quizRuleTitle"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/ruleHeading1"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulesTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/ruleHeading2"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/ruleHeading3"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/ruleHeading4"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading3"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/ruleHeading5"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading4" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:gravity="center"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/exitQuiz"
        android:textAllCaps="false"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintRight_toLeftOf="@id/continueQuiz"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:gravity="center"
        android:drawableTint="@color/lightPinkColor"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/continueQuiz"
        android:textAllCaps="false"
        android:textColor="@color/lightPinkColor"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>