<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kavoon"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/_20ssp"
            android:layout_margin="@dimen/_15sdp"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/commentMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
           android:text="@string/exit_text"
            android:maxLines="2"
            android:textColor="@color/button_bg"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:ellipsize="end"
            android:gravity="top"
            android:textSize="@dimen/_15ssp"
            android:padding="@dimen/_5sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/okData"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kavoon"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/yellow_bg"
                android:background="@drawable/button_bg"
                android:text="@string/ok"
                android:gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/cancelText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kavoon"
                android:background="@drawable/button_bg"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/yellow_bg"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15ssp"/>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>