<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_full_img"
    tools:context=".otpVerify.OtpVerifyActivity">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:src="@drawable/app_logo"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/otpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/kavoon"
            android:text="@string/verifyOtp"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <TextView
            android:id="@+id/otpMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:fontFamily="@font/kavoon"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:text="@string/otpContent"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpText" />


            <EditText
                android:id="@+id/digitOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:background="@drawable/shape_login_edit"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:maxLength="6"
                android:layout_marginTop="@dimen/_28sdp"
                android:text=""
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/teal_700"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpMobile"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/resendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digitOne">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/kavoon"
                android:lineSpacingExtra="@dimen/_6sdp"
                android:text="@string/resendText"
                android:textColor="@color/login_text"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/resendsmsOtp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/kavoon"
                android:lineSpacingExtra="@dimen/_6sdp"
                android:text="@string/resendText2"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
        android:gravity="center"
        android:fontFamily="@font/kavoon"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendOtp" />


</androidx.constraintlayout.widget.ConstraintLayout>