<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_full_img"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:padding="@dimen/_15sdp"
        android:src="@drawable/app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kavoon"
            android:text="@string/getStarted"
            android:textColor="@color/whiteOrDark"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/xmarkImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subWelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:fontFamily="@font/kavoon"
            android:gravity="center"
            android:text="@string/subNumberText"
            android:textColor="@color/whiteOrDark"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/xmarkImage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:background="@drawable/shape_login_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText">

           <com.telcovas.guessthesong.countryCode.CountryCodePicker
                android:id="@+id/countryPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingRight="@dimen/_5sdp"
                app:ccpDialog_allowSearch="true"
                app:ccpDialog_cornerRadius="8dp"
                app:ccpDialog_keyboardAutoPopup="true"
                app:ccpDialog_textColor="@color/login_text"
                app:ccp_arrowColor="@color/black"
                app:ccp_arrowSize="@dimen/_12sdp"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/login_text"
                app:ccp_countryPreference="in,us,nz,gb"
                app:ccp_hintExampleNumber="true"
                app:ccp_textSize="@dimen/_12ssp"
               android:layout_centerVertical="true"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_toRightOf="@+id/countryPicker"
                android:fontFamily="@font/kavoon"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:text=""
                android:maxLength="14"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginLeft="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
            android:gravity="center"
            android:fontFamily="@font/kavoon"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/continueText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectAmountList" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/alreadyAccount"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccount" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:visibility="invisible"
        android:id="@+id/loginProgress"
        layout="@layout/progress_bar_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>